dnd jumping issue fix

--- a/assets/scss/components/_category.scss
+++ b/assets/scss/components/_category.scss
@@ -60,7 +60,6 @@
       }
     }
     .category-body{
-      margin: 8px 4px 0 8px;
       max-height: 630px;
       overflow-y: auto;
       text-rendering: optimizeSpeed;
