--- a/assets/scss/components/_link.scss
+++ b/assets/scss/components/_link.scss
@@ -1,6 +1,6 @@
 .btl-dnd-link{
   padding: 5px;
-  margin-right: 4px;
+  margin: 8px 8px 0px 8px;
   border-radius: 3px;
   .btl-dnd-link-body{
     display: flex;
@@ -66,9 +66,6 @@
         }
       }
     }
-  }
-  &:not(:last-child){
-    margin-bottom: 8px;
   }
   &.btl-dnd-link-dragging{
     .btl-dnd-link-body{
